Unit test Java 8 support